fixed project section

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Elmar's Portfolio</title>
+    <title>Elmar's | Portfolio</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -133,7 +133,7 @@
             </div>
             <div class="row">
                 <div class="row-image img-5"></div>
-                <i class="bx bxs-school"></i>
+                <i class='bx bx-game' ></i>
                 <h3>Pong Game</h3>
                 <p>Classic Ping Pong game made using the Python turtle library in order to practice 
                     using Python libraries and 
@@ -142,15 +142,13 @@
             </div>
             <div class="row">
                 <div class="row-image img-6"></div>
-                <i class="bx bxs-school"></i>
-                <h3>De Anza College</h3>
-                <p>Lorem ipsum emmet sumit aksimoasikdn]
-                    asdasdvjn  asdignvmas asdiovnmsdfsdfsdf
-                    sdf
-                    sdfsdfsdfsdfs
-                    dfdsx
+                <i class='bx bx-spreadsheet'></i>
+                <h3>Portfolio website</h3>
+                <p>This website is my personal portflio website and I decided
+                    to put it here since it took me a while to get right and 
+                    I'm proud of it.
                 </p>
-                <a target="_blank" href="">Read more</a>
+                <a target="_blank" href="https://github.com/Elmar099/Elmar099.github.io">View Code</a>
             </div>
         </div>
 
