--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <section class="home" id="home">
         <div class="home-text">
             <h1>Hello, I'm <span>Elmar</span></h1>
-            <h6>A <span>Full-stack</span> Developer from Sunnyvale, California</h6>
+            <h6>An aspiring <span>Full-stack</span> Developer from Sunnyvale, California</h6>
             <!--<p>
                 Welcome to my personal portfolio website! I am a student attending 
                 San Jose State University persuing a Bahelors degree in Computer
@@ -65,7 +65,7 @@
     <!-- Education -->
     <section class="education" id="education">
         <div class="center">
-            <h3>Education</h3>
+            <h3>-Education-</h3>
         </div>
         <div class="education-content">
             <div class="row">
@@ -92,7 +92,7 @@
      <!-- Projects -->
      <section class="projects" id="projects">
         <div class="center">
-            <h3>Projects</h3>
+            <h3>-Projects-</h3>
         </div>
         <div class="projects-content">
             <div class="row">
@@ -136,7 +136,7 @@
                 <i class='bx bx-game' ></i>
                 <h3>Pong Game</h3>
                 <p>Classic Ping Pong game made using the Python turtle library in order to practice 
-                    using Python libraries and 
+                    using Python libraries. 
                 </p>
                 <a target="_blank" href="https://github.com/Elmar099/PongGame">View Code</a>
             </div>
@@ -156,7 +156,7 @@
     <!-- Contact -->
     <section class="contact" id="contact">
         <div class="center">
-            <h3>Get In Touch</h3>
+            <h3>-Get In Touch-</h3>
         </div>
         <div class="contact-section">
             <div class="contact-info">
