added to project section

--- a/index.html
+++ b/index.html
@@ -98,20 +98,20 @@
             <div class="row">
                 <div class="row-image img-1"></div>
                 <i class='bx bxs-lock' ></i>
-                <h3>Password Manager</h3>
-                <p>This is an application made using Java and SQL for database. 
+                <h3>PassLock</h3>
+                <p>This is an password manager made using Java and SQL for database. 
                     This is a crud application that encypts/decrypts passwords for any website.
                 </p>
                 <a target="_blank" href="https://github.com/Elmar099/Password-Manager">View Code</a>
             </div>
             <div class="row">
-                <div class="row-image img-2"></div>
-                <i class='bx bx-money-withdraw' ></i>
-                <h3>Tipper</h3>
-                <p>This website is made using pure HTML, CSS and JavaScript.
-                    this application calculates the tip amount when given total price and number of friends.
+                <div class="row-image img-4"></div>
+                <i class='bx bx-map' ></i>
+                <h3>Locate ME</h3>
+                <p>A Geo-locator application made using JavaScript, HTML/CSS and leaflet API to log the 
+                    location of best Restaurants, their names and the date into a file-based database. 
                 </p>
-                <a target="_blank" href="https://github.com/Elmar099/Tipper">View Code</a>
+                <a target="_blank" href="https://github.com/Elmar099/LocateMe">View Code</a>
             </div>
             <div class="row">
                 <div class="row-image img-3"></div>
@@ -123,13 +123,13 @@
                 <a target="_blank" href="https://github.com/Elmar099/GlobalTemp">View Code</a>
             </div>
             <div class="row">
-                <div class="row-image img-4"></div>
-                <i class='bx bx-calculator' ></i>
-                <h3>Calculator</h3>
-                <p>Simple and aesthetic looking calculator made using JavaScript and CSS 
-                   to mimic the look and functionality of the iOS calculator.
+                <div class="row-image img-2"></div>
+                <i class='bx bx-money-withdraw' ></i>
+                <h3>Tipper</h3>
+                <p>This app is made using HTML/CSS and JavaScript.
+                    This application calculates the tip amount given total price and no. of friends.
                 </p>
-                <a target="_blank" href="https://github.com/Elmar099/Calculator-">View Code</a>
+                <a target="_blank" href="https://github.com/Elmar099/Tipper">View Code</a>
             </div>
             <div class="row">
                 <div class="row-image img-5"></div>
