changed some of the content

--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
 
         <div class="about-text">       
             <h3>About <span>Me</span></h3>
-            <h2>I am a Junior with love for both front-end and back-end.</h2>
-            <p>I moved to California 9 years ago and code for about 2-4 hours everyday
-                to keep my skills and knowledge sharp. Other than school and coding, I like to play piano, guitar
-                and soccer to keep both mentally and physically fit. 
+            <h2>I am a coder with love for both front-end and back-end.</h2>
+            <p>I moved to California when I was 9 years old and found comfort in computers. I enjoy programming for about 1-2 hours everyday
+                and really love the problem solving aspect of it the most. Other than school and coding, I like to play piano, soccer 
+                and hangout with friends to spend my time. 
             </p>
             <div class="count">
                 <a href="#about"><span>10+</span>Projects Completed.</a>
@@ -71,19 +71,20 @@
             <div class="row">
                 <i class='bx bxs-graduation'></i>
                 <h5>GPA: 3.6 - Present</h5>
-                <h3>San Jose State University</h3>
+                <h3><a class="school" target="_blank" href="https://www.sjsu.edu/">San Jose State University</a></h3>
                 
-                <p>I currently attend SJSU, persuing a Bachelors degree in 
-                    Computer Science. I'm in my Junior year with graduation set to 2023.
+                <p>I currently attend SJSU where I am persuing a Bachelors degree in 
+                    Computer Science. I'm in my Junior year with graduation set to 2023 and i've enjoyed
+                    every bit.
                 </p>
                 
             </div>
             <div class="row">
                 <i class="bx bxs-school"></i>
                 <h5>GPA: 3.7 - July 2020</h5>
-                <h3>De Anza College</h3>
+                <h3> <a class="school" target="_blank" href="https://www.deanza.edu/">De Anza College</a></h3>
                 <p>De Anza was my first step into Programming where I recieved my 
-                    Associates degree in Computer Science with deans list standing.
+                    Associates degree in Computer Science with deans list standing for more than half the quarters.
                 </p>
             </div>
         </div>
