--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <section class="about" id="about">
         
         <div class="about-img">
-            <img src="visuals/prof.png" alt="porjile picture">
+            <img src="visuals/unnamed.jpg" alt="porjile picture">
         </div>
 
         <div class="about-text">       
