fixed project section

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                 <i class='bx bx-game' ></i>
                 <h3>Pong Game</h3>
                 <p>Classic Ping Pong game made using the Python turtle library in order to practice 
-                    using Python libraries. 
+                    using Python libraries as well as math integration in Python. 
                 </p>
                 <a target="_blank" href="https://github.com/Elmar099/PongGame">View Code</a>
             </div>
