added new visuals

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
 <!-- home -->
     <section class="home" id="home">
         <div class="home-text">
-            <h1>Hello, I'm <span>Elmar</span></h1>
+            <h1>Hello, I'm <span>Elmar</span> <img class="wave"
+                src="https://media1.giphy.com/media/WFZvB7VIXBgiz3oDXE/giphy.gif?cid=790b76110c89d38c12d48fd8f7984d64449d491e233fbe1c&rid=giphy.gif&ct=s" alt="wave gif"></h1>
             <h6>An aspiring <span>Full-stack</span> Developer from Sunnyvale, California</h6>
             <!--<p>
                 Welcome to my personal portfolio website! I am a student attending 
@@ -137,7 +138,7 @@
                 <i class='bx bx-game' ></i>
                 <h3>Pong Game</h3>
                 <p>Classic Ping Pong game made using the Python turtle library in order to practice 
-                    using Python libraries as well as math integration in Python. 
+                    using Python libraries as well as math in Python. 
                 </p>
                 <a target="_blank" href="https://github.com/Elmar099/PongGame">View Code</a>
             </div>
