--- a/index.html
+++ b/index.html
@@ -4,23 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Elmar's | Portfolio</title>
+    <title>Elmar's Portfolio</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
+    <link href="https://api.fontshare.com/v2/css?f[]=general-sans@400,600,700&display=swap" rel="stylesheet">
 </head>
 <body>
 <!-- header -->
     <header class="header">
-        <a href="#home" class="logo"></i><span>E</span>lmar<span>I</span>manov</a>
+        <a href="#home" class="logo"></i> <span class="original-name">Elmar <i class='bx bxs-cube-alt bx-spin' ></i></span>
+            <span class="alternate-name">Imanov</span></a>
         <div class="bx bx-menu" id="menu-icon"></div>
 
         <ul class="navbar">
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
-            <li><a href="#education">Education</a></li>
             <li><a href="#projects">Projects</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
@@ -28,17 +29,13 @@
 <!-- home -->
     <section class="home" id="home">
         <div class="home-text">
-            <h1>Hello, I'm <span>Elmar</span> <img class="wave"
+            <h3>Hey, I'm</h3><h1><span class="f-span">Elmar</span><span class="l-span">Imanov</span> <img class="wave"
                 src="https://media1.giphy.com/media/WFZvB7VIXBgiz3oDXE/giphy.gif?cid=790b76110c89d38c12d48fd8f7984d64449d491e233fbe1c&rid=giphy.gif&ct=s" alt="wave gif"></h1>
-            <h6>An aspiring <span>Full-stack</span> Developer from Sunnyvale, California</h6>
-            <!--<p>
-                Welcome to my personal portfolio website! I am a student attending 
-                San Jose State University persuing a Bahelors degree in Computer
-                Science.
-            </p>-->
+            <h6>A <span>Full-stack</span> Developer from Sunnyvale, California</h6>
             <a target="_blank" href="https://www.linkedin.com/in/elmar-imanov/"><i class='bx bxl-linkedin-square' id="social"></i></a>
             <a target="_blank" href="https://github.com/Elmar099"><i class='bx bxl-github' id="social"></i></a>
         </div> 
+        
     </section>
 <!-- About -->
     <section class="about" id="about">
@@ -63,7 +60,7 @@
             </div>
         </div>
     </section>
-    <!-- Education -->
+    <!--
     <section class="education" id="education">
         <div class="center">
             <h3>-Education-</h3>
@@ -87,11 +84,11 @@
             </div>
         </div>
 
-    </section>
+    </section> Education -->
      <!-- Projects -->
      <section class="projects" id="projects">
         <div class="center">
-            <h3>-Projects-</h3>
+            <h3>Projects</h3>
         </div>
         <div class="projects-content">
             <div class="row">
@@ -155,16 +152,16 @@
     <!-- Contact -->
     <section class="contact" id="contact">
         <div class="center">
-            <h3>-Get In Touch-</h3>
+            <h3>Let's Talk!</h3>
         </div>
         <div class="contact-section">
             <div class="contact-info">
                 <h2>Contacts</h2>
-                <p class="">Feel free to reach out to me using my email below or
+                <p class="">Reach out to me using my email below or
                     fill out the form to directly send me a message and say hello. 
                 </p>
                 <div><i class='bx bx-user' ></i>Elmar Imanov</div>
-                <div><i class='bx bx-envelope' ></i>Elmar6999@gmail.com</div>
+                <div><i class='bx bx-envelope' ></i>elmarnov22@gmail.com</div>
                 <div><i class='bx bx-map' ></i>Sunnyvale California</div>
                 <div><i class='bx bx-time-five' > </i>Mon - Fri 7:00 AM - 9:00 PM</div>
             </div>
