--- a/index.html
+++ b/index.html
@@ -13,11 +13,6 @@
     <link href="https://api.fontshare.com/v2/css?f[]=general-sans@400,600,700&display=swap" rel="stylesheet">
 </head>
 <body>
-<!-- header -->
-
-<!--
-<div> home -->
-    
         <div class="gradient-bg">
             <svg xmlns="http://www.w3.org/2000/svg">
                 <defs>
@@ -50,18 +45,23 @@
                 </ul>
             </header>
             <section class="home-text">
-                <h1><span class="f-span">Elmar</span><span class="l-span">Imanov;</span> </h1>
-                <h6>A <span>Full-stack</span> Developer from Sunnyvale, California</h6>
+                <h1><span class="f-span">Elmar</span><span class="l-span"> Imanov.</span></h1>
+                <h6><span>Full-stack</span> Developer from Sunnyvale, California</h6>
                 <a target="_blank" href="https://www.linkedin.com/in/elmar-imanov/"><i class='bx bxl-linkedin-square' id="social"></i></a>
                 <a target="_blank" href="https://github.com/Elmar099"><i class='bx bxl-github' id="social"></i></a>
             </section>
-        </div>   
+         </div>
         <section id="about" class="card1">
             <div class="about-text">       
-                WORK IN PROGRESS...
+                <div class="grid1">project 1</div>
+                <div class="grid2">project 2</div>
+                <div class="grid3">project 3</div>
+                <div class="grid4">project 4</div>
+                <div class="grid5">project 5</div>
+                <div class="grid6">project 6</div>
             </div>
-        </section>
-        <section id="projects" class="card2">
+        </section>  
+       <!--  <section id="projects" class="card2">
             <div>WORK IN PROGRESS...</div>
         </section>
         <section id="contact"class="card3">
@@ -70,7 +70,7 @@
         </section>
         <div class="copy">
             <p>Copyright © 2022 All rights reserved. | Created By <span>Elmar </span> Imanov</p>
-        </div>
+        </div>-->
 <!-- 
     <section id="about" class="card1">
         <div>card1</div>
