--- a/index.html
+++ b/index.html
@@ -53,12 +53,17 @@
          </div>
         <section id="about" class="card1">
             <div class="about-text">       
-                <div class="grid1">project 1</div>
-                <div class="grid2">project 2</div>
-                <div class="grid3">project 3</div>
-                <div class="grid4">project 4</div>
-                <div class="grid5">project 5</div>
-                <div class="grid6">project 6</div>
+                <div class="grid-item item-1"><i class='bx bxs-home-circle' ></i>1 project
+                    <div class="image-container">
+                        
+                    </div>
+                </div>
+                <div class="grid-item item-2"><i class='bx bxs-home-circle' ></i>2 project</div>
+                <div class="grid-item item-3"><i class='bx bxs-home-circle' ></i>3 project</div>
+                <div class="grid-item item-4"><i class='bx bxs-circle' ></i>PROJECTS</div>
+                <div class="grid-item item-5"><i class='bx bxs-home-circle' ></i>5 project</div>
+                <div class="grid-item item-6"><i class='bx bxs-home-circle' ></i>6 project</div>
+                <div class="grid-item item-7"><i class='bx bxs-home-circle' ></i>7 project</div>
             </div>
         </section>  
        <!--  <section id="projects" class="card2">
