--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link href="https://api.fontshare.com/v2/css?f[]=general-sans@400,600,700&display=swap" rel="stylesheet">
 </head>
 <body>
-        <div class="gradient-bg">
+       <div class="gradient-bg">
             <svg xmlns="http://www.w3.org/2000/svg">
                 <defs>
                   <filter id="goo">
@@ -51,45 +51,28 @@
                 <a target="_blank" href="https://github.com/Elmar099"><i class='bx bxl-github' id="social"></i></a>
             </section>
          </div>
-        <section id="about" class="card1">
-            <div class="about-text">       
-                <div class="grid-item item-1"><i class='bx bxs-home-circle' ></i>1 project
-                    <div class="image-container">
-                        
+<!-------About-------->
+        <div id="about">
+            <div class="container">
+                <div class="row">
+                    <div class="about-col-1">
+                        <img src="visuals/ASas.png" alt="Me">
+                    </div>
+                    <div class="about-col-2">
+                        <h1 class="sub-title">A LITTLE BIT <br> ABOUT ME '''</h1>
+                        <p class="about-p">With a fervor for both design aesthetics and
+                            technical finesse, I guide projects from idea to launch, ensuring a 
+                            fluid trajectory that leaves an indelible mark on the digital canvas.
+                            Let's embark on this adventure together, crafting experiences that resonate and inspire.</p>
+
+                        <div class="tab-titles">
+
+                        </div>
                     </div>
                 </div>
-                <div class="grid-item item-2"><i class='bx bxs-home-circle' ></i>2 project</div>
-                <div class="grid-item item-3"><i class='bx bxs-home-circle' ></i>3 project</div>
-                <div class="grid-item item-4"><i class='bx bxs-circle' ></i>PROJECTS</div>
-                <div class="grid-item item-5"><i class='bx bxs-home-circle' ></i>5 project</div>
-                <div class="grid-item item-6"><i class='bx bxs-home-circle' ></i>6 project</div>
-                <div class="grid-item item-7"><i class='bx bxs-home-circle' ></i>7 project</div>
-            </div>
-        </section>  
-       <!--  <section id="projects" class="card2">
-            <div>WORK IN PROGRESS...</div>
-        </section>
-        <section id="contact"class="card3">
-            <div>WORK IN PROGRESS...</div>
-        
-        </section>
-        <div class="copy">
-            <p>Copyright © 2022 All rights reserved. | Created By <span>Elmar </span> Imanov</p>
-        </div>-->
-<!-- 
-    <section id="about" class="card1">
-        <div>card1</div>
-    </section>
-    <section id="projects" class="card2">
-        <div>card2</div>
-    </section>
-    <section id="contact"class="card3">
-        <div>card3</div>
-    </section>About -->
 
-    <!-- 
-    copyright -->
-    <!-- JavaScript Links-->
+            </div>
+        </div>  
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="js/script.js"></script>
 </body>
