changed to white

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
                 </ul>
             </header>
             <section class="home-text">
-                <h1><span class="f-span">Elmar</span><span class="l-span"> Imanov.</span></h1>
-                <h6><span>Full-stack</span> Developer from Sunnyvale, California</h6>
+                <h1><span class="f-span">Elmar </span><span class="l-span">Imanov ///</span></h1>
+                <h6>A creative <span class="stack">Full Stack developer</span> from Sunnyvale, California.</h6>
                 <a target="_blank" href="https://www.linkedin.com/in/elmar-imanov/"><i class='bx bxl-linkedin-square' id="social"></i></a>
                 <a target="_blank" href="https://github.com/Elmar099"><i class='bx bxl-github' id="social"></i></a>
             </section>
@@ -66,7 +66,30 @@
                             Let's embark on this adventure together, crafting experiences that resonate and inspire.</p>
 
                         <div class="tab-titles">
-
+                            <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
+                            <p class="tab-links" onclick="opentab('experience')">Experience</p>
+                            <p class="tab-links" onclick="opentab('education')">Education</p>
+                        </div>
+                        <div class="tab-contents active-tab" id="skills">
+                            <ul>
+                                <li><span>Web Development</span>Creative and intuitive websites</li>
+                                <li><span>GUI Development</span>Fast and reliable applications</li>
+                                <li><span>Machine Learning</span>Adaptive algorithms for data-driven insights</li>
+                            </ul>
+                        </div>
+                        <div class="tab-contents" id="experience">
+                            <ul>
+                                <li><span>2021-2022</span>Java Programming Tutor</li>
+                                <li><span>2023</span>Software Engineer Intern at General Dynamics</li>
+                                <li><span>2023-current</span>Freelance Web Developer</li>
+                            </ul>
+                        </div>
+                        <div class="tab-contents" id="education">
+                            <ul>
+                                <li><span>De Anza College</span>Associates in Computer Science</li>
+                                <li><span>San Jose State University</span>Bachelors in Computer Science</li>
+                                <li><span>Amazon</span>AWS Cloud Practitioner</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
