--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Elmar's Portfolio</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="loco.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;400;500;700&display=swap" rel="stylesheet">
@@ -13,6 +14,7 @@
     <link href="https://api.fontshare.com/v2/css?f[]=general-sans@400,600,700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div class="data-scroll-container">
        <div class="gradient-bg">
             <svg xmlns="http://www.w3.org/2000/svg">
                 <defs>
@@ -79,15 +81,15 @@
                         </div>
                         <div class="tab-contents" id="experience">
                             <ul>
-                                <li><span>2021-2022</span>Java Programming Tutor</li>
-                                <li><span>2023</span>Software Engineer Intern at General Dynamics</li>
                                 <li><span>2023-current</span>Freelance Web Developer</li>
+                                <li><span>2023</span>Software Engineer Intern at General Dynamics</li>
+                                <li><span>2021-2022</span>Java Programming Tutor</li>
                             </ul>
                         </div>
                         <div class="tab-contents" id="education">
                             <ul>
-                                <li><span>De Anza College</span>Associates in Computer Science</li>
                                 <li><span>San Jose State University</span>Bachelors in Computer Science</li>
+                                <li><span>De Anza College</span>Associates in Computer Science</li>
                                 <li><span>Amazon</span>AWS Cloud Practitioner</li>
                             </ul>
                         </div>
@@ -95,8 +97,11 @@
                 </div>
 
             </div>
-        </div>  
+        </div> 
+    </div>
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="js/script.js"></script>
+    <script type="module" src="js/index.js"></script>
+    
 </body>
 </html>
