added project section

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     <link href="https://api.fontshare.com/v2/css?f[]=general-sans@400,600,700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="data-scroll-container">
        <div class="gradient-bg">
             <svg xmlns="http://www.w3.org/2000/svg">
                 <defs>
@@ -63,7 +62,7 @@
                     <div class="about-col-2">
                         <h1 class="sub-title">A LITTLE BIT <br> ABOUT ME '''</h1>
                         <p class="about-p">With a fervor for both design aesthetics and
-                            technical finesse, I guide projects from idea to launch, ensuring a 
+                            technical finesse, I lead projects from idea to launch, ensuring a 
                             fluid trajectory that leaves an indelible mark on the digital canvas.
                             Let's embark on this adventure together, crafting experiences that resonate and inspire.</p>
 
@@ -95,10 +94,19 @@
                         </div>
                     </div>
                 </div>
-
             </div>
         </div> 
-    </div>
+        <div id="projects">
+            <h1 class="sub-title">My Projects</h1>
+            <div class="project-grid">
+                  <img class="project-grid-col-2" src="visuals/proj1.png" alt="Project 1">
+                  <img src="visuals/proj4.png" alt="Project 2">
+                  <img class="project-grid-row-2" src="visuals/proj6.png" alt="Project 3">
+                  <img src="visuals/proj2.png" alt="Project 4">
+                  <img src="visuals/proj5.jpg" alt="Project 5">
+                  <img src="visuals/proj3.png" alt="Project 6">
+            </div>
+        </div>
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="js/script.js"></script>
     <script type="module" src="js/index.js"></script>
