changes to projects section

--- a/index.html
+++ b/index.html
@@ -96,15 +96,58 @@
                 </div>
             </div>
         </div> 
+        <!--" class="project-grid-row-2"-->
         <div id="projects">
             <h1 class="sub-title">My Projects</h1>
             <div class="project-grid">
-                  <img class="project-grid-col-2" src="visuals/proj1.png" alt="Project 1">
-                  <img src="visuals/proj4.png" alt="Project 2">
-                  <img class="project-grid-row-2" src="visuals/proj6.png" alt="Project 3">
-                  <img src="visuals/proj2.png" alt="Project 4">
-                  <img src="visuals/proj5.jpg" alt="Project 5">
-                  <img src="visuals/proj3.png" alt="Project 6">
+                <div class="hov-card">
+                    <img class="project-grid-col-2" src="visuals/proj1.png" alt="Project 1">
+                    <div class="desc">
+                        <h2>Food Delivery Service</h2>
+                        <p>React | SASS | MySQL | Docker | Google Maps</p>
+                        <a target="_blank" href="https://github.com/Elmar099/Delivery_app">Code</a>
+                    </div> 
+                </div>
+                <div class="hov-card">
+                    <img src="visuals/proj4.png" alt="Project 2">
+                    <div class="desc">
+                        <h2>Food Delivery Service</h2>
+                        <p>React | SASS | MySQL | Docker | Google Maps</p>
+                        <a target="_blank" href="https://github.com/Elmar099/Delivery_app">Code</a>
+                    </div>
+                </div>
+                <div class="hov-card">
+                    <img src="visuals/proj6.png" alt="Project 3">
+                    <div class="desc">
+                        <h2>Food Delivery Service</h2>
+                        <p>React | SASS | MySQL | Docker | Google Maps</p>
+                        <a target="_blank" href="https://github.com/Elmar099/Delivery_app">Code</a>
+                    </div>
+                </div>
+                <div class="hov-card">
+                    <img src="visuals/proj2.png" alt="Project 4">
+                    <div class="desc">
+                        <h2>Food Delivery Service</h2>
+                        <p>React | SASS | MySQL | Docker | Google Maps</p>
+                        <a target="_blank" href="https://github.com/Elmar099/Delivery_app">Code</a>
+                    </div>
+                </div>
+                <div class="hov-card">
+                    <img src="visuals/proj5.jpg" alt="Project 5">
+                    <div class="desc">
+                        <h2>Food Delivery Service</h2>
+                        <p>React | SASS | MySQL | Docker | Google Maps</p>
+                        <a target="_blank" href="https://github.com/Elmar099/Delivery_app">Code</a>
+                    </div>
+                </div>
+                <div class="hov-card">
+                    <img src="visuals/proj3.png" alt="Project 6">
+                    <div class="desc">
+                        <h2>Food Delivery Service</h2>
+                        <p>React | SASS | MySQL | Docker | Google Maps</p>
+                        <a target="_blank" href="https://github.com/Elmar099/Delivery_app">Code</a>
+                    </div>
+                </div>
             </div>
         </div>
     <script src="https://unpkg.com/scrollreveal"></script>
