--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </header>
-            <section class="home-text">
+            <section  id="home" class="home-text">
                 <h1><span class="f-span">Elmar </span><span class="l-span">Imanov ///</span></h1>
                 <h6>A creative <span class="stack">Full Stack developer</span> from Sunnyvale, California.</h6>
                 <a target="_blank" href="https://www.linkedin.com/in/elmar-imanov/"><i class='bx bxl-linkedin-square' id="social"></i></a>
@@ -104,51 +104,55 @@
                     <img class="project-grid-col-2" src="visuals/proj1.png" alt="Project 1">
                     <div class="desc">
                         <h2>Food Delivery Service</h2>
-                        <p>React | SASS | MySQL | Docker | Google Maps</p>
-                        <a target="_blank" href="https://github.com/Elmar099/Delivery_app">Code</a>
+                        <p>React.js | SASS | MySQL | Docker | Google Maps | Node.js</p>
+                        <a target="_blank" href="https://github.com/Elmar099/Delivery_app"><i class='bx bxs-right-arrow-alt'></i></a>
                     </div> 
                 </div>
                 <div class="hov-card">
                     <img src="visuals/proj4.png" alt="Project 2">
                     <div class="desc">
-                        <h2>Food Delivery Service</h2>
-                        <p>React | SASS | MySQL | Docker | Google Maps</p>
-                        <a target="_blank" href="https://github.com/Elmar099/Delivery_app">Code</a>
+                        <h2>Password Vault</h2>
+                        <p>Java | JavaFX | SceneBuilder | SQLite</p>
+                        <a target="_blank" href="https://github.com/Elmar099/Password-Manager"><i class='bx bxs-right-arrow-alt'></i></a>
                     </div>
                 </div>
                 <div class="hov-card">
                     <img src="visuals/proj6.png" alt="Project 3">
                     <div class="desc">
-                        <h2>Food Delivery Service</h2>
-                        <p>React | SASS | MySQL | Docker | Google Maps</p>
-                        <a target="_blank" href="https://github.com/Elmar099/Delivery_app">Code</a>
+                        <h2>Inspiration Photos</h2>
+                        <p>Swift | Web APIs</p>
+                        <a target="_blank" href="https://github.com/Elmar099/Photo_Inspo_Swift"><i class='bx bxs-right-arrow-alt'></i></a>
                     </div>
                 </div>
                 <div class="hov-card">
                     <img src="visuals/proj2.png" alt="Project 4">
                     <div class="desc">
-                        <h2>Food Delivery Service</h2>
-                        <p>React | SASS | MySQL | Docker | Google Maps</p>
-                        <a target="_blank" href="https://github.com/Elmar099/Delivery_app">Code</a>
+                        <h2>Music Streamer</h2>
+                        <p>Swift | Ruby | Firebase</p>
+                        <a target="_blank" href="https://github.com/Elmar099/Musicle_iOS"><i class='bx bxs-right-arrow-alt'></i></a>
                     </div>
                 </div>
                 <div class="hov-card">
                     <img src="visuals/proj5.jpg" alt="Project 5">
                     <div class="desc">
-                        <h2>Food Delivery Service</h2>
-                        <p>React | SASS | MySQL | Docker | Google Maps</p>
-                        <a target="_blank" href="https://github.com/Elmar099/Delivery_app">Code</a>
+                        <h2>IMDb Dashboard</h2>
+                        <p>Python | Flask | Pandas | Beautiful Soup | HTML</p>
+                        <a target="_blank" href="https://github.com/jajian/Web-Scrapping-Project"><i class='bx bxs-right-arrow-alt'></i></a>
                     </div>
                 </div>
                 <div class="hov-card">
                     <img src="visuals/proj3.png" alt="Project 6">
                     <div class="desc">
-                        <h2>Food Delivery Service</h2>
-                        <p>React | SASS | MySQL | Docker | Google Maps</p>
-                        <a target="_blank" href="https://github.com/Elmar099/Delivery_app">Code</a>
+                        <h2>Food Locator</h2>
+                        <p>JavaScript | Node.js | Express.js | NeDb | HTML | CSS</p>
+                        <a target="_blank" href="https://github.com/Elmar099/LocateMe"><i class='bx bxs-right-arrow-alt'></i></a>
                     </div>
                 </div>
             </div>
+        </div>
+        <div id="skills">
+            <h1>Skills & Tools:</h1>
+
         </div>
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="js/script.js"></script>
