--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
                 <div class="bx bx-menu" id="menu-icon"></div>
         
                 <ul class="navbar">
-                    <li><a href="#home">Home</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#projects">Projects</a></li>
+                    <li><a href="#technology">Skills</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </header>
@@ -60,7 +60,7 @@
                         <img src="visuals/ASas.png" alt="Me">
                     </div>
                     <div class="about-col-2">
-                        <h1 class="sub-title">A LITTLE BIT <br> ABOUT ME '''</h1>
+                        <h1 class="sub-title">A LITTLE BIT <br> ABOUT ME.</h1>
                         <p class="about-p">With a fervor for both design aesthetics and
                             technical finesse, I lead projects from idea to launch, ensuring a 
                             fluid trajectory that leaves an indelible mark on the digital canvas.
@@ -97,26 +97,10 @@
             </div>
         </div> 
         <!--" class="project-grid-row-2"-->
-        <div id="projects">
+        <section id="projects">
             <h1 class="sub-title">My Projects</h1>
             <div class="project-grid">
-                <div class="hov-card">
-                    <img class="project-grid-col-2" src="visuals/proj1.png" alt="Project 1">
-                    <div class="desc">
-                        <h2>Food Delivery Service</h2>
-                        <p>React.js | SASS | MySQL | Docker | Google Maps | Node.js</p>
-                        <a target="_blank" href="https://github.com/Elmar099/Delivery_app"><i class='bx bxs-right-arrow-alt'></i></a>
-                    </div> 
-                </div>
-                <div class="hov-card">
-                    <img src="visuals/proj4.png" alt="Project 2">
-                    <div class="desc">
-                        <h2>Password Vault</h2>
-                        <p>Java | JavaFX | SceneBuilder | SQLite</p>
-                        <a target="_blank" href="https://github.com/Elmar099/Password-Manager"><i class='bx bxs-right-arrow-alt'></i></a>
-                    </div>
-                </div>
-                <div class="hov-card">
+                <div class="hov-card project-grid-row-2">
                     <img src="visuals/proj6.png" alt="Project 3">
                     <div class="desc">
                         <h2>Inspiration Photos</h2>
@@ -124,7 +108,23 @@
                         <a target="_blank" href="https://github.com/Elmar099/Photo_Inspo_Swift"><i class='bx bxs-right-arrow-alt'></i></a>
                     </div>
                 </div>
-                <div class="hov-card">
+                <div class="hov-card project-grid-col-2">
+                    <img src="visuals/logo.png" alt="Project 1">
+                    <div class="desc">
+                        <h2>Food Delivery Service</h2>
+                        <p>React.js | SASS | MySQL | Docker | Google Maps | Node.js</p>
+                        <a target="_blank" href="https://github.com/Elmar099/Delivery_app"><i class='bx bxs-right-arrow-alt'></i></a>
+                    </div> 
+                </div>
+                    <div class="hov-card">
+                    <img src="visuals/rester.png" alt="Project 6">
+                    <div class="desc">
+                        <h2>Food Locator</h2>
+                        <p>JavaScript | Node.js | Express.js | NeDb | HTML | CSS</p>
+                        <a target="_blank" href="https://github.com/Elmar099/LocateMe"><i class='bx bxs-right-arrow-alt'></i></a>
+                    </div>
+                </div>
+                <div class="hov-card project-grid-row-2">
                     <img src="visuals/proj2.png" alt="Project 4">
                     <div class="desc">
                         <h2>Music Streamer</h2>
@@ -140,20 +140,61 @@
                         <a target="_blank" href="https://github.com/jajian/Web-Scrapping-Project"><i class='bx bxs-right-arrow-alt'></i></a>
                     </div>
                 </div>
-                <div class="hov-card">
-                    <img src="visuals/proj3.png" alt="Project 6">
+                <div class="hov-card project-grid-col-2">
+                    <img src="visuals/password1.png" alt="Project 2">
                     <div class="desc">
-                        <h2>Food Locator</h2>
-                        <p>JavaScript | Node.js | Express.js | NeDb | HTML | CSS</p>
-                        <a target="_blank" href="https://github.com/Elmar099/LocateMe"><i class='bx bxs-right-arrow-alt'></i></a>
+                        <h2>Password Vault</h2>
+                        <p>Java | JavaFX | SceneBuilder | SQLite</p>
+                        <a target="_blank" href="https://github.com/Elmar099/Password-Manager"><i class='bx bxs-right-arrow-alt'></i></a>
                     </div>
                 </div>
             </div>
-        </div>
-        <div id="skills">
-            <h1>Skills & Tools:</h1>
+        </section>
+        <section id="technology">
+            <h1 class="sub-title">Skills & Tools</h1>
+            <div class="outer-grid">
+                <h1 class="subsub-title">01 — frontend</h1>
+                <div class="inner-grid">
+                    <ul>
+                        <li>JavaScript</li>
+                        <li>TypeScript</li>
+                        <li>HTML, CSS & SCSS</li>
+                        <li>Tailwind CSS</li>
+                        <li>React.js</li>
+                        <li>Three.js</li>
+                        <li>Next.js</li>
+                    </ul>
+                </div>
+                <h1 class="subsub-title">02 — backend</h1>
+                <div class="inner-grid">
+                    <ul>
+                        <li>Java</li>
+                        <li>Python</li>
+                        <li>Node</li>
+                        <li>REST API's</li>
+                        <li>MongoDb</li>
+                        <li>MySQL</li>
+                        <li>Spring Boot</li>
+                        <li>Flask</li>
+                        <li>C++</li>
+                    </ul>
+                </div>
+                <h1 class="subsub-title">03 — technologies</h1>
+                <div class="inner-grid">
+                    <ul>
+                        <li>Docker</li>
+                        <li>Git(Github, GitLab, Bitbucket)</li>
+                        <li>Blender</li>
+                        <li>Postman</li>
+                        <li>CMake</li>
+                        <li>Qt</li>
+                        <li>Scenebuilder</li>
+                        <li>Putty</li>
+                    </ul>
+                </div>
+            </div>
 
-        </div>
+        </section>
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="js/script.js"></script>
     <script type="module" src="js/index.js"></script>
