--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         </div> 
         <!--" class="project-grid-row-2"-->
         <section id="projects">
-            <h1 class="sub-title">My Projects</h1>
+            <h1 class="sub-title">SELECTED WORKS</h1>
             <div class="project-grid">
                 <div class="hov-card project-grid-row-2">
                     <img src="visuals/proj6.png" alt="Project 3">
@@ -109,7 +109,7 @@
                     </div>
                 </div>
                 <div class="hov-card project-grid-col-2">
-                    <img src="visuals/logo.png" alt="Project 1">
+                    <img src="visuals/proj1.png" alt="Project 1">
                     <div class="desc">
                         <h2>Food Delivery Service</h2>
                         <p>React.js | SASS | MySQL | Docker | Google Maps | Node.js</p>
@@ -117,7 +117,7 @@
                     </div> 
                 </div>
                     <div class="hov-card">
-                    <img src="visuals/rester.png" alt="Project 6">
+                    <img src="visuals/proj3.png" alt="Project 6">
                     <div class="desc">
                         <h2>Food Locator</h2>
                         <p>JavaScript | Node.js | Express.js | NeDb | HTML | CSS</p>
@@ -141,7 +141,7 @@
                     </div>
                 </div>
                 <div class="hov-card project-grid-col-2">
-                    <img src="visuals/password1.png" alt="Project 2">
+                    <img src="visuals/proj4.png" alt="Project 2">
                     <div class="desc">
                         <h2>Password Vault</h2>
                         <p>Java | JavaFX | SceneBuilder | SQLite</p>
@@ -151,7 +151,7 @@
             </div>
         </section>
         <section id="technology">
-            <h1 class="sub-title">Skills & Tools</h1>
+            <h1 class="sub-title">WHAT I DO</h1>
             <div class="outer-grid">
                 <h1 class="subsub-title">01 — frontend</h1>
                 <div class="inner-grid">
@@ -159,7 +159,7 @@
                         <li>JavaScript</li>
                         <li>TypeScript</li>
                         <li>HTML, CSS & SCSS</li>
-                        <li>Tailwind CSS</li>
+                        <li>Tailwind</li>
                         <li>React.js</li>
                         <li>Three.js</li>
                         <li>Next.js</li>
@@ -183,7 +183,7 @@
                 <div class="inner-grid">
                     <ul>
                         <li>Docker</li>
-                        <li>Git(Github, GitLab, Bitbucket)</li>
+                        <li>Git</li>
                         <li>Blender</li>
                         <li>Postman</li>
                         <li>CMake</li>
@@ -193,7 +193,39 @@
                     </ul>
                 </div>
             </div>
-
+        </section>
+        <section id="copyright">
+            <div class="contact">
+                <p>Got a project in mind?</p>
+                <a href="contact.html"><h1 class="sub-title">GET IN CONTACT</h1></a>    
+            </div>
+            <div class="top-grid">
+                <div class="bottom-grid">
+                    <h1 class="hihi">2024 © <br>Elmar Imanov</h1>
+                </div>  
+                <div class="bottom-grid">
+                    <h2>Socials</h2>
+                    <ul>
+                        <li><a target="_blank" href="https://www.linkedin.com/in/elmar-imanov/">LinkedIn</a></li>
+                        <li><a target="_blank" href="https://github.com/Elmar099">GitHub</a></li>
+                        <li><a target="_blank" href="https://www.instagram.com/elmar099/Instagram">Instagram</a></li>
+                        <li><a target="_blank" href="https://leetcode.com/u/Atlas1E/">LeetCode</a></li>
+                    </ul>
+                </div>
+                <div class="bottom-grid">
+                    <h2>Navigation</h2>
+                    <ul>
+                        <li><a href="#about">About</a></li>
+                        <li><a href="#projects">Projects</a></li>
+                        <li><a href="#technology">Skills</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                    </ul>
+                </div>
+                
+                <div class="bottom-grid">
+                    <a class="up" href="#home"><i class='bx bx-up-arrow-alt'></i></a>
+                </div>            
+            </div>
         </section>
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="js/script.js"></script>
