--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                         <li><a href="#about">About</a></li>
                         <li><a href="#projects">Projects</a></li>
                         <li><a href="#technology">Skills</a></li>
-                        <li><a href="#contact">Contact</a></li>
+                        <li><a href="#copyright">Contact</a></li>
                     </ul>
                 </div>
                 
