--- a/src/contact.html
+++ b/src/contact.html
@@ -13,11 +13,11 @@
         <h2>Elmar Imanov</h2>
 
         <ul class="navbar">
-            <li><a href="../src/index.html">Home</a></li>
-            <li><a href="../src/index.html">About</a></li>
-            <li><a href="../src/index.html">Projects</a></li>
-            <li><a href="../src/index.html">Skills</a></li>
-            <li><a href="../src/index.html">Contact</a></li>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="../index.html">About</a></li>
+            <li><a href="../index.html">Projects</a></li>
+            <li><a href="../index.html">Skills</a></li>
+            <li><a href="../index.html">Contact</a></li>
         </ul>
     </header>
     <section  id="home" class="hero-text">
