--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
                         </div>
                         <div class="tab-contents" id="experience">
                             <ul>
-                                <li><span>2023-current</span>Freelance Web Developer</li>
+                                <li><span>2025-current</span>Software Engineer at Microsoft</li>
+                                <li><span>2023-2024</span>Freelance Web Developer at Upwork</li>
                                 <li><span>2023</span>Software Engineer Intern at General Dynamics</li>
-                                <li><span>2021-2022</span>Java Programming Tutor</li>
                             </ul>
                         </div>
                         <div class="tab-contents" id="education">
@@ -194,6 +194,7 @@
             </div>
         </section>
         <section id="copyright">
+            <div class="contains">
             <div class="contact">
                 <p>Got a project in mind?</p>
                 <a href="src/contact.html"><h1 class="sub-title">GET IN CONTACT</h1></a>    
@@ -224,6 +225,7 @@
                     <a class="up" href="#home"><i class='bx bx-up-arrow-alt'></i></a>
                 </div>            
             </div>
+        </div>
         </section>
         
     <script src="https://unpkg.com/scrollreveal"></script>
