--- a/src/contact.html
+++ b/src/contact.html
@@ -29,15 +29,19 @@
     <section class="contact-form">
         <form action="mailto:elmarnov22@gmail.com" id="contactForm">
           <label for="name">Your Name <span>*</span></label>
-          <input type="text" placeholder="Elmar Imanov" id="name" name="name" required>
+          <input type="text" placeholder="Elmar Imanov" id="name" name="name">
           <label for="email">Email <span>*</span></label>
-          <input type="email" id="email" placeholder="elmarnov22@gmail.com" name="email" required>
+          <input type="email" id="email" placeholder="elmarnov22@gmail.com" name="email">
           <label for="company">Company <span>*</span></label>
-          <input type="company" id="company" placeholder="Google" name="company" required>
+          <input type="company" id="company" placeholder="Google" name="company">
           <label for="message">Message <span>*</span></label>
-          <textarea placeholder="Project details, timelines, etc." id="message" name="message" rows="7" required></textarea>
-          <button type="submit">Let's Do it</button>
-        </form>
+          <textarea placeholder="Project details, timelines, etc." id="message" name="message" rows="7"></textarea>
+          <div class="butts">
+            <button type="submit">Let's Do it</button>
+            <button><a href="../index.html">Want to look at the bubbles longer</a></button>
+        
+          </div>
+          </form>
         <div class="bottom-grid">
             <h2>Contact Details</h2>
             <p>Elmarnov22@gmail.com</p>
@@ -45,7 +49,7 @@
             <p>Sunnyvale, CA</p>
             <p>Mon - Sat 7 AM - 5 PM PST</p>
             <h2 style="margin-top: 40px;">Socials</h2>
-            <ul>
+            <ul class="socials">
                 <li><a target="_blank" href="https://www.linkedin.com/in/elmar-imanov/">LinkedIn</a></li>
                 <li><a target="_blank" href="https://github.com/Elmar099">GitHub</a></li>
                 <li><a target="_blank" href="https://www.instagram.com/elmar099/Instagram">Instagram</a></li>
@@ -60,7 +64,7 @@
             </div>  
             <div class="bottom-grid">
                 <h2>Socials</h2>
-                <ul>
+                <ul class="socials">
                     <li><a target="_blank" href="https://www.linkedin.com/in/elmar-imanov/">LinkedIn</a></li>
                     <li><a target="_blank" href="https://github.com/Elmar099">GitHub</a></li>
                     <li><a target="_blank" href="https://www.instagram.com/elmar099/Instagram">Instagram</a></li>
